@@ -1,3 +1,7 @@
+2002-10-01  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/mips/tm-irix6.h: Include solib.h.
+
 2002-10-01  Andrew Cagney  <ac131313@redhat.com>
 
 	* rs6000-tdep.c (rs6000_gdbarch_init): For powerpc:7400, fix
